--- a/app/src/main/res/layout/decision_struct_activity.xml
+++ b/app/src/main/res/layout/decision_struct_activity.xml
@@ -11,4 +11,16 @@
         android:textSize="20sp"
         android:textColor="#000000"
         android:gravity="center_horizontal" />
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/scrollView3" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/description_decision_struct"
+            android:id="@+id/textView" />
+    </ScrollView>
 </LinearLayout>
