--- a/app/src/main/res/layout/type_activity.xml
+++ b/app/src/main/res/layout/type_activity.xml
@@ -12,11 +12,23 @@
         android:textColor="#000000"
         android:gravity="center_horizontal" />
 
-    <TextView
+    <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/description_types"
-        android:id="@+id/description_types" />
+        android:id="@+id/scrollView" >
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/description_types"
+                android:id="@+id/description_types" />
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
