--- a/app/src/main/res/layout/java_activity.xml
+++ b/app/src/main/res/layout/java_activity.xml
@@ -4,8 +4,20 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".view.JavaActivity">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <include
+            layout="@layout/toolbar_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </android.support.design.widget.AppBarLayout>
     <TabHost
         android:id="@+id/tabHost"
         android:layout_width="match_parent"
@@ -16,7 +28,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:fillViewport="true"
-            android:scrollbars="none" >
+            android:scrollbars="horizontal"
+            android:clipToPadding="true">
             <TabWidget
                 android:id="@android:id/tabs"
                 android:layout_width="match_parent"
@@ -55,7 +68,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <include layout="@layout/array_activity"/>
+                <include layout="@layout/variable_activity"/>
 
             </LinearLayout>
 
